05deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-dp
  labels:
    app: kuber-dp
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1 # шаг изменения по 1ому. Один гасится, один запускается
      maxUnavailable: 1 # мах число Подов недоступных, при обновлении
    type: RollingUpdate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
      - name: kuber-app
        image: alxinsh/docker-java-test-app:5.0
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 25
          periodSeconds: 5
